--- a/DataDefinition/src/org/unesco/jisis/datadefinition/wksex/WKSVisualPanel.form
+++ b/DataDefinition/src/org/unesco/jisis/datadefinition/wksex/WKSVisualPanel.form
@@ -58,7 +58,7 @@
                       <EmptySpace min="-2" pref="54" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
-                      <Component id="jScrollPane1" pref="57" max="32767" attributes="0"/>
+                      <Component id="jScrollPane1" max="32767" attributes="0"/>
                       <EmptySpace min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
