--- a/Data Entry Ex/src/org/unesco/jisis/dataentryex/OutlineTopComponent.form
+++ b/Data Entry Ex/src/org/unesco/jisis/dataentryex/OutlineTopComponent.form
@@ -59,6 +59,8 @@
                           <Component id="wksPanel" min="-2" max="-2" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
+                              <Component id="btnMarc21FixedFieldEditor" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
                               <Component id="lblRecordChanged" min="-2" pref="127" max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -97,6 +99,7 @@
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="lblRecordChanged" alignment="1" min="-2" pref="13" max="-2" attributes="0"/>
                                   <Component id="jPanel1" alignment="1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="btnMarc21FixedFieldEditor" alignment="1" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -688,6 +691,17 @@
                 </Component>
               </SubComponents>
             </Container>
+            <Component class="javax.swing.JButton" name="btnMarc21FixedFieldEditor">
+              <Properties>
+                <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+                  <ResourceString bundle="org/unesco/jisis/dataentryex/Bundle.properties" key="OutlineTopComponent.btnMarc21FixedFieldEditor.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+                </Property>
+                <Property name="enabled" type="boolean" value="false"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnMarc21FixedFieldEditorActionPerformed"/>
+              </Events>
+            </Component>
           </SubComponents>
         </Container>
         <Container class="javax.swing.JPanel" name="recordPanel">
