--- a/DatabaseWizards/src/org/unesco/jisis/wizards/marc/ExpISO2709VisualPanel.form
+++ b/DatabaseWizards/src/org/unesco/jisis/wizards/marc/ExpISO2709VisualPanel.form
@@ -49,7 +49,7 @@
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="exportMfnPanel" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="optionsPanel" min="-2" pref="218" max="-2" attributes="0"/>
+              <Component id="optionsPanel" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -478,7 +478,7 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <Component id="jSeparator1" alignment="0" max="32767" attributes="1"/>
+                      <Component id="jSeparator1" alignment="0" pref="184" max="32767" attributes="1"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
