Fix synchronization between Data Entry, Data Viewer and Data Browser Reduced Number of suggestions requested to server from 200 to 150 Added Wait Cursor when getting rows for dictionary terms and DB Browser PrintSort - Fix output of HTML header for plaintext when 'Don't use sorting" selected

--- a/Data Search/src/org/unesco/jisis/datasearch/SearchTopComponent.form
+++ b/Data Search/src/org/unesco/jisis/datasearch/SearchTopComponent.form
@@ -423,6 +423,9 @@
                           <ResourceString bundle="org/unesco/jisis/datasearch/Bundle.properties" key="SearchTopComponent.chkbDisableSuggestions.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
                         </Property>
                       </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="chkbDisableSuggestionsActionPerformed"/>
+                      </Events>
                     </Component>
                   </SubComponents>
                 </Container>
