New ComboBox for search results and Marked set All radio buttons, comboBox and Text fields are now working correctly depending on the radio button activated

--- a/DatabaseWizards/src/org/unesco/jisis/wizards/marc/ExpDCVisualPanel.form
+++ b/DatabaseWizards/src/org/unesco/jisis/wizards/marc/ExpDCVisualPanel.form
@@ -367,6 +367,9 @@
               <ResourceString bundle="org/unesco/jisis/wizards/marc/Bundle.properties" key="ExpDCVisualPanel.rdbMfnRange.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rdbMfnRangeActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JRadioButton" name="rdbAllMfn">
           <Properties>
@@ -391,6 +394,9 @@
               <ResourceString bundle="org/unesco/jisis/wizards/marc/Bundle.properties" key="ExpDCVisualPanel.rdbMarked.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rdbMarkedActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JRadioButton" name="rdbMfns">
           <Properties>
@@ -435,6 +441,9 @@
               <ResourceString bundle="org/unesco/jisis/wizards/marc/Bundle.properties" key="ExpDCVisualPanel.rdbSearchResult.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rdbSearchResultActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel15">
           <Properties>
